Revise course schedule and session content
Updated course details and session information.

--- a/schedule.html
+++ b/schedule.html
@@ -408,16 +408,16 @@ footer{margin-top:18px;color:var(--muted);font-size:0.9rem;text-align:center}
     <header>
       <div class="header-content">
         <div class="course-header">
-            <h1 class="title">Introduction to Theoretical Linguistics (Syntax)</h1>
-            <p class="subtitle">Visualizing the structure of language</p>
+            <h1 class="title">Introduction to Theoretical Linguistics (Phonology and Morphology)</h1>
+            <p class="subtitle">How systematic are sounds and words?</p>
             <div class="details">
-                Fall 2025<br>
+                Spring 2026<br>
                 Friday, the 3rd period
             </div>
-            <h2 class="short-title">Introduction to Syntax</h2>
+            <h2 class="short-title">Introduction to Phonology/Morphology</h2>
         </div>
         <p class="lead">
-          This course is one of the foundational lectures in contemporary theoretical linguistics. It focuses particularly on the formal aspects of linguistic expressions, introducing theoretical tools necessary for <b>analyzing the hierarchical structure of (words and) sentences</b>. As outlined in the schedule below, the course offers a comprehensive treatment ranging from the internal structure of words to larger syntactic domains such as verb phrases, noun phrases, and full sentences.
+         A tentative schedule is shown below:
           </p>
       </div>
     </header>
@@ -509,7 +509,7 @@ const scheduleData =
   {
     "session": "0",
     "chapter": "Preliminaries<br><br>Watch before 10/02",
-    "class": "",
+    "class": "Course orientaion",
     "format": "on-demand",
     "date": "",
     "video": "1 Introduction to linguistics (34:39)<https://www.youtube.com/watch?v=cHDqpiJoqpk>, 2 Prescriptivism vs descriptivism (17:48)<https://www.youtube.com/watch?v=mO4WQB1BIq0>",
@@ -519,21 +519,9 @@ const scheduleData =
     "date2": ""
   },
   {
-    "session": "1",
-    "chapter": "Chapter 1",
-    "class": "What is syntax?",
-    "format": "face-to-face",
-    "date": "2025/10/3",
-    "video": "1 Parts of Speech(20:32)<https://www.youtube.com/watch?v=EzlNj8NNX2A&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm>,  2 Functional Parts of Speech (13:17)<https://www.youtube.com/watch?v=sk5iO_uFgKw&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm&index=2>, 3 Subcategories (22:53)<https://www.youtube.com/watch?v=0JvcF6SrDFQ&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm&index=3>",
-    "deadlineHW": "2025/10/9",
-    "handout": "Slides<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_6e808762f50a478abde6a2945f193ee6.pdf>",
-    "deadlineClass": "2025/10/3",
-    "date2": "2025/10/3"
-  },
-  {
     "session": "Part",
     "chapter": "",
-    "class": "Framework 1: PS-rules",
+    "class": "Phonetics",
     "format": "",
     "date": "",
     "video": "",
@@ -543,9 +531,21 @@ const scheduleData =
     "date2": ""
   },
   {
+    "session": "1",
+    "chapter": "",
+    "class": "Vocal tract anatomy & articulators",
+    "format": "face-to-face",
+    "date": "2025/10/3",
+    "video": "1 Parts of Speech(20:32)<https://www.youtube.com/watch?v=EzlNj8NNX2A&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm>,  2 Functional Parts of Speech (13:17)<https://www.youtube.com/watch?v=sk5iO_uFgKw&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm&index=2>, 3 Subcategories (22:53)<https://www.youtube.com/watch?v=0JvcF6SrDFQ&list=PL1ymN_px3GFQZfoDLgH9AK1CoKuWq2hkm&index=3>",
+    "deadlineHW": "2025/10/9",
+    "handout": "Slides<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_6e808762f50a478abde6a2945f193ee6.pdf>",
+    "deadlineClass": "2025/10/3",
+    "date2": "2025/10/3"
+  },
+  {
     "session": "2",
-    "chapter": "Chapter 2",
-    "class": "Parts of speech",
+    "chapter": "",
+    "class": "IPA (day1): consonants",
     "format": "face-to-face",
     "date": "2025/10/10",
     "video": "1 Structure (9:51)<https://www.youtube.com/watch?v=JoUk6RsUgCs&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=1>, 2 Constituency tests (17:47)<https://www.youtube.com/watch?v=KlUe3TEeDus&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=2>, 3 PS rules [1] (25:14)<https://www.youtube.com/watch?v=KlUe3TEeDus&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=2>,,  (The following video highly recommended, but optional), 4 *Exercise (20:12)<https://www.youtube.com/watch?v=Svd7AuAcGDs&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=11>",
@@ -556,8 +556,8 @@ const scheduleData =
   },
   {
     "session": "3",
-    "chapter": "Chapter 3",
-    "class": "Constituency, trees and rules (I): <br>NP, AP, and AdvP",
+    "chapter": "",
+    "class": "IPA (day2): vowels",
     "format": "face-to-face",
     "date": "2025/10/17",
     "video": "1 A review (10:30) <https://youtu.be/N2nbP7IUBzc>, 2 PS rules [2] (26:01)<https://www.youtube.com/watch?v=HzJQMerlzic&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=4>, 3 How to draw a tree (17:30)<https://www.youtube.com/watch?v=1bsOQweQMA0&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=5>, 4 Ambiguity (10:27)<https://www.youtube.com/watch?v=1sYPVkstAoU&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=6>,  (The following video is highly recommended, but optional),5 *Exercise (18:53)<https://www.youtube.com/watch?v=_2hlrVdGGfk&list=PL1ymN_px3GFRrK8wjw3duZoly6MejvT2A&index=12>",
@@ -567,9 +567,21 @@ const scheduleData =
     "date2": "2025/10/17"
   },
   {
+    "session": "Part",
+    "chapter": "",
+    "class": "Phonology",
+    "format": "",
+    "date": "",
+    "video": "",
+    "deadlineHW": "",
+    "handout": "",
+    "deadlineClass": "",
+    "date2": ""
+  },
+  {
     "session": "4",
-    "chapter": "Chapter 3",
-    "class": "Constituency, trees and rules (II):<br>PP, VP, TP, and CP",
+    "chapter": "",
+    "class": "Phonemes & allophones; phonological alternations",
     "format": "face-to-face",
     "date": "2025/10/24",
     "video": "There is no new video to watch this week. Instead please work on Ex 1 & 2 in Assignment 3 and come to class prepared with your answers.",
@@ -580,8 +592,8 @@ const scheduleData =
   },
   {
     "session": "5",
-    "chapter": "Chapter 3",
-    "class": "Constituency, trees and rules (III): <br> Practice day",
+    "chapter": "",
+    "class": "phonological alternations",
     "format": "face-to-face",
     "date": "2025/10/31",
     "video": "1 Structural relations (14:00)<https://youtu.be/-qE1hMlf3oY>, After watching the video, please do the following assignment and submit it online (by midnight Nov 7), Assignment 4(pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_e971d6d8e195450d885789cc7d51e3f0.pdf>, Assignment 4 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_4663bc21294f4f45bf084722714245da.docx>",
@@ -592,20 +604,20 @@ const scheduleData =
   },
   {
     "session": "6",
-    "chapter": "Chapter 4",
-    "class": "Structural relation",
-    "format": "no class but make sure to submit your HW",
-    "date": "2025/11/7",
-    "video": "1 NPs (12:09)<https://www.youtube.com/watch?v=vlF1TBhlass&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev>, 2 bar-levels (17:13)<https://www.youtube.com/watch?v=pdo6k_RqL3Y&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev&index=2>, 3 X-bar rules (10:14)<https://www.youtube.com/watch?v=bZOnuM7x4tY&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev&index=3>, ",
-    "deadlineHW": "2025/11/13",
-    "handout": "Answer key (Assgn 4)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_7dded8a5ed5842f183636c03f0d5148f.pdf>[after 11/08/2025]",
-    "deadlineClass": "2025/11/7",
-    "date2": "2025/11/7"
+    "chapter": "Midterm",
+    "class": "Midterm exam",
+    "format": "face-to-face",
+    "date": "2025/11/14",
+    "video": "Optional extra credit assignment:  you will earn extra points if you solve and submit it (Due 23:59 Nov 21). , Bonus HW (docx) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_9f783657cb44431c8e46016cc31ee476.docx>, Bonus HW (pdf) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_9878d8a6b3054c69acb997ecc5599595.pdf>",
+    "deadlineHW": "2025/11/27",
+    "handout": "Assignment 5 (pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_85effd18ccc1431e8275d7a822555a57.pdf>, Assignment 5 (docx) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_f2d31936e80849728a1e178e9293d76a.docx> , Slides (Class 7)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_bfbc147f673a42349926cee167179805.pdf>[after 11/15/2025]",
+    "deadlineClass": "2025/11/14",
+    "date2": "2025/11/14"
   },
   {
     "session": "Part",
     "chapter": "",
-    "class": "Framework 2: X'-syntax",
+    "class": "Morphology",
     "format": "",
     "date": "",
     "video": "",
@@ -616,32 +628,8 @@ const scheduleData =
   },
   {
     "session": "7",
-    "chapter": "Chapter 6",
-    "class": "X-bar syntax (I): <br>NP & VP",
-    "format": "face-to-face",
-    "date": "2025/11/14",
-    "video": "Optional extra credit assignment:  you will earn extra points if you solve and submit it (Due 23:59 Nov 21). , Bonus HW (docx) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_9f783657cb44431c8e46016cc31ee476.docx>, Bonus HW (pdf) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_9878d8a6b3054c69acb997ecc5599595.pdf>",
-    "deadlineHW": "2025/11/27",
-    "handout": "Assignment 5 (pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_85effd18ccc1431e8275d7a822555a57.pdf>, Assignment 5 (docx) <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_f2d31936e80849728a1e178e9293d76a.docx> , Slides (Class 7)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_bfbc147f673a42349926cee167179805.pdf>[after 11/15/2025]",
-    "deadlineClass": "2025/11/14",
-    "date2": "2025/11/14"
-  },
-  {
-    "session": "",
-    "chapter": "",
-    "class": "No class (Mitasai)",
-    "format": "",
-    "date": "2025/11/21",
-    "video": "1 Compl/adjunct (25:53) <https://www.youtube.com/watch?v=1avF6TiLnmA&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev&index=4>, 2 How to draw trees (13:14)<https://www.youtube.com/watch?v=-wpfH32fjdA&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev&index=5>, 3 X-bar parameters (7:35)<https://www.youtube.com/watch?v=BCW7u8-DyvQ&list=PL1ymN_px3GFQKseKiqqlBenGiptrUaEev&index=6>",
-    "deadlineHW": "",
-    "handout": "Answer key for Bonus HW<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_7975e806d52a4b449d8a978369c51be3.pdf>[after 11/22/2025]",
-    "deadlineClass": "",
-    "date2": "2025/11/21"
-  },
-  {
-    "session": "8",
-    "chapter": "Chapter 6",
-    "class": "X-bar syntax (II)",
+    "chapter": "Don (2014: Ch 1)",
+    "class": "Knowledge of words",
     "format": "face-to-face",
     "date": "2025/11/28",
     "video": "1 DPs (12:25)<https://www.youtube.com/watch?v=xf36OW8RNso&list=PL1ymN_px3GFTiSvLpSkrZ-Iu5Adn2pa0o>, 2 TPs [A] (17:56)<https://www.youtube.com/watch?v=MOtouOMwCQ4&list=PL1ymN_px3GFTiSvLpSkrZ-Iu5Adn2pa0o&index=2>, 3 TPs [B] (8:40)<https://youtu.be/3Tey2S7GyyY>,  4 CPs (6:12)<https://youtu.be/DHvKlFjjaCw>,  After watching the videos complete the following assignment and post it online (Due 13:00 Dec 5 = before the next class starts)., Assignment 7 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_f94106db5c06426cace9d40a90169996.docx>, Assignment 7 (pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_40f4b85a031f4d2dbed3fd5ccb818a62.pdf>",
@@ -651,9 +639,9 @@ const scheduleData =
     "date2": "2025/11/28"
   },
   {
-    "session": "9",
-    "chapter": "Chapter 7",
-    "class": "Extending X-bar Theory (I): <br>DP, TP & CP",
+    "session": "8",
+    "chapter": "Don (2014: Ch 2)",
+    "class": "Word-formation in the lexicon",
     "format": "face-to-face",
     "date": "2025/12/5",
     "video": "1 From Tense to Voice (22:04)<https://www.youtube.com/watch?v=hvVMnlVuo9c&list=PL1ymN_px3GFTiSvLpSkrZ-Iu5Adn2pa0o&index=4>, 2 From TP to VoiceP (12:36)<https://www.youtube.com/watch?v=Dkfsi6xlxEw&list=PL1ymN_px3GFTiSvLpSkrZ-Iu5Adn2pa0o&index=5>, 3 Interim summary (11:24)<https://www.youtube.com/watch?v=m-IKsXIEXvE&feature=youtu.be>",
@@ -663,33 +651,33 @@ const scheduleData =
     "date2": "2025/12/5"
   },
   {
-    "session": "10",
-    "chapter": "Chapter 7",
-    "class": "Extending X-bar Theory (II): <br> PerfP, ProgP & VoiceP",
+    "session": "9",
+    "chapter": "Don (2014: Ch 2)",
+    "class": "Word-formation in the lexicon",
     "format": "face-to-face",
     "date": "2025/12/12",
-    "video": "1 Overgeneration (8:30)<https://www.youtube.com/watch?v=KZHbArrgnrA&list=PL1ymN_px3GFR9rsqOu6DJ3W0ri31zdcru>,2 Thematic relations (9:31)<https://www.youtube.com/watch?v=17JjiDJ7H40&list=PL1ymN_px3GFR9rsqOu6DJ3W0ri31zdcru&index=2>, 3 Theta roles (19:42)<https://www.youtube.com/watch?v=Z9JaClNzR-E&list=PL1ymN_px3GFR9rsqOu6DJ3W0ri31zdcru&index=3>, 4 Expletives and EPP (11:07)<https://www.youtube.com/watch?v=xKJYA9iCQ4g&list=PL1ymN_px3GFR9rsqOu6DJ3W0ri31zdcru&index=4>, After watching the video\nplease do the following assignment and submit it online (by midnight Dec 19), Assignment 10 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_c826cc2a0bb740489bb5063f3c6f06ac.docx>, Assignment 10(pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_8824b11d1e254482a098ecf254bd247a.pdf>",
+    "video": "",
     "deadlineHW": "2025/12/18",
     "handout": "Assignment 9 (pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_e37324e7fbfc48889a5a91d5448634b6.pdf>, Assignment 9 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_f2d8f5c9b2f34d1da1af1108f82933c1.docx>, Answer key for Assgn 9<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_6a85fcce55dc41cb9f687415375d14cf.pdf>[after 12/13/2025]",
     "deadlineClass": "2025/12/12",
     "date2": "2025/12/12"
   },
   {
-    "session": "Part",
-    "chapter": "",
-    "class": "Displacement properties",
-    "format": "",
-    "date": "",
+    "session": "10",
+    "chapter": "Don (2014: Ch 3)",
+    "class": "Inflectional morphology",
+    "format": "face-to-face",
+    "date": "2025/12/12",
     "video": "",
-    "deadlineHW": "",
-    "handout": "",
-    "deadlineClass": "",
-    "date2": ""
+    "deadlineHW": "2025/12/18",
+    "handout": "Assignment 9 (pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_e37324e7fbfc48889a5a91d5448634b6.pdf>, Assignment 9 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_f2d8f5c9b2f34d1da1af1108f82933c1.docx>, Answer key for Assgn 9<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_6a85fcce55dc41cb9f687415375d14cf.pdf>[after 12/13/2025]",
+    "deadlineClass": "2025/12/12",
+    "date2": "2025/12/12"
   },
   {
     "session": "11",
-    "chapter": "Chapter 8",
-    "class": "Theta Theory",
+    "chapter": "Don (2014: Ch 3)",
+    "class": "Inflectional morphology",
     "format": "no class but make sure to submit your HW",
     "date": "2025/12/19",
     "video": "Slides <https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_dcad8eead56a49c48c4d49a8edd06587.pdf>, 1 T-to-C (7:25)<https://youtu.be/33IFBgJE6fI>,2 V-to-T (4:10)<https://youtu.be/TiFHlWkUZgI>,  3 Motivation (10:23)<https://youtu.be/2IzeLPyhW6g>, 4 English C system (6:30)<https://youtu.be/e_4DBoIhTcs>, 5 Do-support (English) (4:00) <https://youtu.be/LuHA78eHDA4>, 6 NegP (3:30) <https://youtu.be/c_riprBF5vw>,7 Do-support (Japanese) (6:05)<https://youtu.be/vtCDtM5lIjY>",
@@ -700,11 +688,11 @@ const scheduleData =
   },
   {
     "session": "12",
-    "chapter": "Chapter 10",
-    "class": "Head Movement",
+    "chapter": "Don (2014: Ch 3)",
+    "class": "Argument structure I: Nominalisation",
     "format": "face-to-face",
     "date": "2025/12/26",
-    "video": "1 Example 1: Ergatives and passives (10:05) <https://youtu.be/7K__To6B8ug>, 2 Analysis 1: Raising (9:16)<https://www.youtube.com/watch?v=xUmSd_DcsxA&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v>, 3 Analysis 2: Case Theory (18:29)<https://www.youtube.com/watch?v=1SUpzwS8n44&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=2>, 4 Analysis 3: Passives (16:02)<https://www.youtube.com/watch?v=dhd1WELhyXk&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=3>,  5 Analysis 4: Unaccusatives (11:09) <https://www.youtube.com/watch?v=8qwguC47LTY&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=4>",
+    "video": "1 Raising (9:16)<https://www.youtube.com/watch?v=xUmSd_DcsxA&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v>, 2 Case Theory (18:29)<https://www.youtube.com/watch?v=1SUpzwS8n44&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=2>, 3 Passives (16:02)<https://www.youtube.com/watch?v=dhd1WELhyXk&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=3>, 4 Unaccusatives (11:09) <https://www.youtube.com/watch?v=8qwguC47LTY&list=PL1ymN_px3GFSbR0m-HEdSKQEgmsc2Y8-v&index=4>",
     "deadlineHW": "2026/1/8",
     "handout": "Assignment 11 (docx)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_0e997486b64c4e17ba12f2a1d987b744.docx>, Assignment 11(pdf)<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_966287b96db24221b0750f8199e09b4d.pdf>, Answer key for Assgn 11<https://91fefc4d-047b-4ea2-946f-b7b816f5c8be.usrfiles.com/ugd/91fefc_a8363bf1809c4e7eb56e57452b0b75ca.pdf>[after 12/26/2025]",
     "deadlineClass": "2025/12/26",
@@ -712,8 +700,8 @@ const scheduleData =
   },
   {
     "session": "13",
-    "chapter": "Chapter 11",
-    "class": "DP Movement<br>(A-movement)",
+    "chapter": "Don (2014: Ch 4)",
+    "class": "Argument structure II: Derived verbs",
     "format": "face-to-face",
     "date": "2026/1/9",
     "video": "1 Wh-movement (15:07)<https://www.youtube.com/watch?v=rycBQT2S0Fo&list=PL1ymN_px3GFSpoJKAatjr8mAX29UWZCRe&index=1>, 2 Simple derivation (8:35)<https://www.youtube.com/watch?v=x5hmsYvL0rU&list=PL1ymN_px3GFSpoJKAatjr8mAX29UWZCRe&index=2>, 3 Traces (9:09)<https://www.youtube.com/watch?v=H1hJIcNiUcw&list=PL1ymN_px3GFSpoJKAatjr8mAX29UWZCRe&index=6>",
@@ -724,27 +712,15 @@ const scheduleData =
   },
   {
     "session": "14",
-    "chapter": "Chapter 12",
-    "class": "Wh-movement<br>(A'-movement)",
-    "format": "face-to-face",
+    "chapter": "Final exam",
+    "class": "",
+    "format": "",
     "date": "2026/1/23",
     "video": "Prepare for the final!!",
     "deadlineHW": "2026/1/29",
     "handout": "",
     "deadlineClass": "2026/1/23",
     "date2": "2026/1/23"
-  },
-  {
-    "session": "Part",
-    "chapter": "",
-    "class": "Final exam",
-    "format": "face-to-face",
-    "date": "",
-    "video": "1 Selection (13:35)<https://www.youtube.com/watch?v=rR7L20BRYYA&list=PL1ymN_px3GFRWwZwX4R6N6_bBseZTY1qb>, 2 Auxiliaries (23:42)<https://www.youtube.com/watch?v=cJ5iv3th4iQ&list=PL1ymN_px3GFRWwZwX4R6N6_bBseZTY1qb&index=2>, 3 Do support (5:36)<https://www.youtube.com/watch?v=TNr1S-07uSY&list=PL1ymN_px3GFRWwZwX4R6N6_bBseZTY1qb&index=3>, Be Have and Do (5:16)<https://www.youtube.com/watch?v=Qnx8_p5gvUw&list=PL1ymN_px3GFRWwZwX4R6N6_bBseZTY1qb&index=4>",
-    "deadlineHW": "",
-    "handout": "",
-    "deadlineClass": "",
-    "date2": ""
   }
 ]
 ;
