--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
 <style>
 :root{
-  --bg:#e6f0ff;
+  --bg:#CCFFCC;
   --card:#ffffff;
   --muted:#555555;
   --accent:#1e3a8a;
